@startuml

title __LAB4V2's Class Diagram__\n

  namespace  {
    namespace om.example.lab4v2 {
      class com.example.lab4v2.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab4v2 {
      class com.example.lab4v2.HelloController {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab4v2 {
      interface com.example.lab4v2.LinkedListInterface {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab4v2 {
      class com.example.lab4v2.MyLinkedList {
      }
    }
  }
  

  namespace  {
    namespace om.example.lab4v2 {
      class com.example.lab4v2.Slide {
      }
    }
  }
  

  com.example.lab4v2.HelloApplication -up-|> javafx.application.Application
  com.example.lab4v2.MyLinkedList .up.|> com.example.lab4v2.LinkedListInterface
  com.example.lab4v2.MyLinkedList o-- com.example.lab4v2.MyLinkedList.Node : head


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
